--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,32 @@
 {
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+    "files.trimTrailingWhitespace": true,
+    "files.eol": "\n",
+
+    "editor.fontSize": 14,
+
     "editor.tabSize": 2,
-    "editor.insertSpaces": true,
+    "editor.insertSpaces": false,
     "editor.renderWhitespace": "all",
-    "files.trimTrailingWhitespace": true
-}
+
+    "editor.inlineSuggest.enabled": true,
+
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    },
+    "prettier.tabWidth": 2,
+
+    "[json]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+
+    "[jsonc]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+
+    "[markdown]": {
+      "editor.formatOnSave": false
+    }
+  }
